# ira

./: .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  SECURITY.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: schedule.json
src/: main.c
src/api/: iracing_api.c  iracing_api.h
src/data/: database.c  database.h  models.c  models.h
src/filter/: race_filter.c  race_filter.h
src/irsdk/: irsdk.c  irsdk.h  irsdk_defines.h  yaml_parser.c  yaml_parser.h
src/launcher/: launcher.c  launcher.h
src/telemetry/: telemetry_log.c  telemetry_log.h
src/util/: config.c  config.h  crypto.c  crypto.h  http.c  http.h  json.c  json.h  oauth.c  oauth.h
